# md-preview

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LESSONS.md  README.md  README_zh.md  build.rs  bundle.sh  gen_ico.py  gen_icon.py  install.sh  release-sign.sh  task.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
assets/enhance/: preview-enhance.js  update-check.js
assets/hljs/: github-dark.min.css  github.min.css  highlight.min.js
assets/katex/: katex.inline.css
docs/: index.html  support.html
hooks/: pre-push
macos/finder-extension/: ExtensionInfo.plist  FinderSyncExtension.swift  project.yml
macos/finder-extension/MDPreviewFinderExtension.xcodeproj/: project.pbxproj
mobile/: README.md  RELEASE_CHECKLIST.md
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/app/mdpreview/mobile/: MainActivity.java
mobile/android/app/src/main/res/values/: strings.xml  styles.xml
mobile/ios/: project.yml
mobile/ios/MDPreviewMobile/: AppDelegate.swift  Info.plist  PreviewViewController.swift
mobile/ios/MDPreviewMobile/Assets.xcassets/AppIcon.appiconset/: Contents.json
mobile/scripts/: build-release.sh  generate-android-upload-keystore.sh  verify-mobile-renderer.mjs  verify-release-readiness.sh
mobile/shared/: mobile-preview.css  mobile-preview.js  preview.html
scripts/: fetch-sparkle.sh  fetch-winsparkle.sh  generate-appcast.sh  generate-windows-appcast.sh  release.sh  verify-desktop-search.mjs  verify-sparkle-update.sh  verify-windows-update.sh  verify.sh
src/: main.rs  session.rs
windows/: installer.nsi
