[package]
name = "md-preview"
version = "1.1.23"
edition = "2021"

[dependencies]
wry = "0.50"
tao = "0.33"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rfd = "0.15"
notify = "7"
open = "5"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
sys-locale = "0.3"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAlert", "NSApplication", "NSButton", "NSCell", "NSControl", "NSEvent", "NSImage", "NSMenu", "NSMenuItem", "NSResponder", "NSView"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "NSString"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
